# hyperagent

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Justfile  README.md  package-lock.json  package.json  vitest.config.ts
.github/: copilot-instructions.md  dependabot.yml
builtin-modules/: bash.json  doc-core.json  ooxml-core.json  pdf-charts.json  pdf.json  pptx-charts.json  pptx-tables.json  pptx.json  tsconfig.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  HOW-IT-WORKS.md  MCP.md  RELEASING.md  SECURITY.md  SKILLS.md  TESTING-USER-SKILLS.md  USAGE.md
output-hyperagent-1776267496-943d0667/: Artemis_II_Mission_Briefing.pptx
output-hyperagent-1776350413-41ff0660/: Artemis_II_Mission.pptx
output-hyperagent-1776353484-2b81ab2f/: Artemis_II_Mission_Presentation.pptx
output-hyperagent-1776798630-0862b11b/: Artemis_II_Mission.pptx
plugins/: tsconfig.json
scripts/: build-binary.js  build-modules.js  check-native-runtime.js  extract-hyperlight-builtins.ts  generate-native-dts.ts  (+4 more)
src/code-validator/guest/: Cargo.toml  package-lock.json  package.json
src/code-validator/guest/host/: Cargo.toml  build.rs
src/code-validator/guest/host/src/: runtime.rs  sandbox.rs
src/code-validator/guest/runtime/: Cargo.toml  build.rs
src/code-validator/guest/runtime/include/: stdio.h
src/code-validator/guest/runtime/src/: js_parser.rs  validator.rs
src/code-validator/guest/runtime/src/main/stubs/: clock.rs  mod.rs
src/sandbox/runtime/modules/native-globals/: Cargo.toml
src/sandbox/runtime/modules/native-globals/src/: lib.rs
(+113 files in other folders)
