## Hyperlight Analysis Guest
##
## A Hyperlight-based guest binary for secure code analysis.
## Provides ReDoS-safe parsing of JavaScript modules, plugins, and handlers.
##
## This crate is independent of hyperlight-js and can be used standalone.

[workspace]
resolver = "2"
members = ["host", "runtime"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/anthropics/hyperagent"

[workspace.dependencies]
# Hyperlight core crates — published on crates.io, pinned to the version that
# hyperlight-js 0.3.x builds against.
hyperlight-common = { version = "0.16.0", default-features = false }
hyperlight-guest-bin = { version = "0.16.0" }
hyperlight-guest = { version = "0.16.0" }
hyperlight-host = { version = "0.16.0", default-features = false, features = ["executable_heap", "kvm", "mshv3"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
